<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://www.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>lv.degra</groupId>
    <artifactId>accounting</artifactId>
    <version>1.0</version>
    <packaging>pom</packaging>
    <name>accounting</name>
    <description>Degra accounting</description>

    <modules>
        <module>core</module>
        <module>desktop</module>
        <module>company</module>
    </modules>

    <properties>
        <spring.version>3.3.3</spring.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <java.version>21.0.4</java.version>
        <javafx.version>21.0.4</javafx.version>
        <postgres.version>42.7.1</postgres.version>
        <jacoco.version>0.8.8</jacoco.version>
        <sonar.coverage.jacoco.xmlReportPaths>${project.basedir}/target/jacoco/jacoco.xml</sonar.coverage.jacoco.xmlReportPaths>
        <sonar.organization>elmits</sonar.organization>
        <sonar.host.url>https://sonarcloud.io</sonar.host.url>
        <sonar.projectKey>degra_accounting</sonar.projectKey>
        <sonar.java.binaries>target/classes</sonar.java.binaries>
        <sonar.exclusions>**/*.java</sonar.exclusions>
        <sonar.scm.provider>git</sonar.scm.provider>
        <version.org.hibernate>6.4.4.Final</version.org.hibernate>
    </properties>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-dependencies</artifactId>
                <version>${spring.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>


    <dependencies>
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>javax.persistence</groupId>
            <artifactId>javax.persistence-api</artifactId>
            <version>2.2</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>lv.degra</groupId>
            <artifactId>core</artifactId>
            <version>1.0</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>org.hibernate.orm</groupId>
            <artifactId>hibernate-core</artifactId>
            <version>6.4.4.Final</version>
        </dependency>
        <dependency>
            <groupId>org.hibernate.orm</groupId>
            <artifactId>hibernate-envers</artifactId>
            <version>6.4.4.Final</version>
        </dependency>
    </dependencies>
    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.13.0</version>
                <configuration>
                    <source>${java.version}</source>
                    <target>${java.version}</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-maven-plugin</artifactId>
                <version>${spring.version}</version>
                <executions>
                    <execution>
                        <goals>
                            <goal>repackage</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.2.3</version>
                <configuration>
                    <forkCount>1</forkCount>
                    <reuseForks>false</reuseForks>
                    <argLine>
                        --add-exports javafx.graphics/com.sun.javafx.sg.prism=ALL-UNNAMED --add-exports
                        javafx.graphics/com.sun.javafx.tk=ALL-UNNAMED --add-exports
                        javafx.graphics/com.sun.glass.ui=ALL-UNNAMED --add-exports
                        javafx.graphics/com.sun.prism=ALL-UNNAMED --add-exports
                        javafx.graphics/com.sun.javafx.geom=ALL-UNNAMED --add-exports
                        javafx.graphics/com.sun.javafx.scene=ALL-UNNAMED --add-exports
                        javafx.graphics/com.sun.javafx.scene.input=ALL-UNNAMED --add-opens
                        javafx.graphics/com.sun.javafx.tk=ALL-UNNAMED --add-opens
                        javafx.graphics/com.sun.javafx.tk.quantum=ALL-UNNAMED
                    </argLine>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.sonarsource.scanner.maven</groupId>
                <artifactId>sonar-maven-plugin</artifactId>
                <version>3.11.0.3922</version>
                <executions>
                    <execution>
                        <phase>verify</phase>
                        <goals>
                            <goal>sonar</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.jacoco</groupId>
                <artifactId>jacoco-maven-plugin</artifactId>
                <version>0.8.8</version>
                <executions>
                    <execution>
                        <id>default-report</id>
                        <goals>
                            <goal>report</goal>
                        </goals>
                        <configuration>
                            <outputDirectory>${project.build.directory}${file.separator}site${file.separator}jacoco</outputDirectory>
                            <formats>
                                <format>XML</format>
                            </formats>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
        <defaultGoal>package</defaultGoal>
    </build>
</project>

